--- a/.underc/about.html
+++ b/.underc/about.html
@@ -27,22 +27,26 @@
 			Dept. of Economics at Harvard's Graduate School of Arts and Sciences in 
 			2015-2017.</p>
 		<div class="lal">
-			Email me: <a href="mailto:chcgnzls@gmail.com" target="_top">chcgnzls@gmail.com</a>
+			Email me: <a href="mailto:chcgnzls@gmail.com" Subject="Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chcgnzls@gmail.com</a>
 		</div>
 		<div class="ral">
 			<a href="files/CV_sgonzales.pdf" target="_blank">View my CV</a>
 		</div>
 		<div style="clear: both"></div>
 		<h2>Research Interests</h2>
-		<p>My previous research has documented growing disparity in the rates of 
+		<p>My previous research documented growing disparity in the rates of 
 			tissue plasminogen activator (tPA) utilization between rural and urban 
-			hospitals and the effectiveness of Primary Stroke Center accreditation to
-			close the gap. I have also shown substantial variation in the within 
-			Latino rates of insurance, differences in the relationships with the 
-			likelihood of having health insurance with factors such as 
-			immigration status, and substantial reductions in disparities among 
-			Latinos and between Latinos and Whites were concurrent with 
-			enactment of the Affordable Care Act and Medicaid expansion.</p>
+			hospitals and the effectiveness of Primary Stroke Center accreditation in
+			closing the gap. I have also shown substantial variation in 
+			rates of health insurance coverage among different Latino groups, 
+			differences in the relationships with the likelihood of having health 
+			insurance with factors such as immigration status, 
+			and that substantial reductions in disparities both among Latinos and 
+			between Latinos and Whites were concurrent with implementation 
+			of the Affordable Care Act (ACA) and Medicaid expansion.</p>
+		<p>Currently, I interested in identifying modern and historical sources of
+			structural and implicit racism, particularly in the Southwest and West.
+		</p>
 		<h3>Working Papers</h3>
 		<p><b>Sources of Behavioral Bias in Rank and Review of Applications to 
 			Medical School.</b></p>
