--- a/.underc/about.html
+++ b/.underc/about.html
@@ -19,6 +19,7 @@
 		</div>
 	</div>
 	<div class="content">
+		<h1>Sergio &ldquo;Checo&rdquo; Gonzales</h1>
 		<p>I&rsquo;m a medical student in University of New Mexico's Combined
 			BA/MD Program. I completed an interdisciplinary BA in 
 			Mathematics &amp; Statistics, Physical &amp; Natural Sciences, and 
@@ -44,7 +45,7 @@
 			and that substantial reductions in disparities both among Latinos and 
 			between Latinos and Whites were concurrent with implementation 
 			of the Affordable Care Act (ACA) and Medicaid expansion.</p>
-		<p>Currently, I interested in identifying modern and historical sources of
+		<p>Currently, I&rsquo;m interested in identifying modern and historical sources of
 			structural and implicit racism, particularly in the Southwest and West.
 		</p>
 		<h3>Working Papers</h3>
