--- a/.underc/index.html
+++ b/.underc/index.html
@@ -11,17 +11,21 @@
 	<div id="topBar">
 	<div class="bottomAlign" id="main-nav">
 		<ul class="nav">
-			<li><a href="#">Home</a></li>
-			<li><a href="map.html" target="_blank">Exploring Opportunity</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="#" class="nav">Home</a></li>
+			<li><a href="map.html" target="_blank" class="nav">Exploring Opportunity</a></li>
+			<li><a href="about.html" class="nav">About</a></li>
 		</ul>
 	</div>
 	</div>
 	<div class="content">
-		<h1>Content</h1>
-		<h2>Lots of it</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<h2>More of it</h2>
+		<h1>Projects</h1>
+		<h2>Exploring Opportunity</h2>
+		<p>This ongoing project creates a client-side web application for 
+			researchers to visualize trends in Social Mobility in the 
+			United States. It allows users to map the data of the <a href="http://www.equality-of-opportunity.org" target="_blank"><u>Equality of Opportunity</u></a> 
+			project, query additional data from the U.S. Census Bureau, and upload
+			their own data, and develop predictive models.</p>
+		<h2>Other odds and ends</h2>
 		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 		<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 	</div>
