--- a/underconstruction/index.html
+++ b/underconstruction/index.html
@@ -23,8 +23,8 @@
 		<p>This ongoing project creates a client-side web application for 
 			researchers to visualize trends in Social Mobility in the 
 			United States. It allows users to map the data of the <a href="http://www.equality-of-opportunity.org" target="_blank"><u>Equality of Opportunity</u></a> 
-			project, query additional data from the U.S. Census Bureau, and upload
-			their own data, and develop predictive models.</p>
+			project, query additional data from the <a href="https://www.census.gov/data/developers/data-sets.html" target="_blank"><u>U.S. Census Bureau API</u></a>, upload
+			their own local data, and develop predictive models.</p>
 		<h2>Other odds and ends</h2>
 		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 		<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
