--- a/underconstruction/about.html
+++ b/underconstruction/about.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 	<div class="content">
-		<h1>Sergio &ldquo;Checo&rdquo; Gonzales</h1>
+		<h1>t&#643;&#603;&rsquo; ko&#720;</h1>
 		<p>I&rsquo;m a medical student in University of New Mexico's Combined
 			BA/MD Program. I completed an interdisciplinary BA in 
 			Mathematics &amp; Statistics, Physical &amp; Natural Sciences, and 
