--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 			Dept. of Economics at Harvard's Graduate School of Arts and Sciences in 
 			2015-2017.</p>
 		<div class="lal">
-			Email me: <a href="mailto:chcgnzls@gmail.com" Subject="Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chcgnzls@gmail.com</a>
+			Email me: <a href="mailto:chcgnzls@gmail.com?Subject=Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chcgnzls@gmail.com</a>
 		</div>
 		<div class="ral">
 			<a href="files/CV_sgonzales.pdf" target="_blank">View my CV</a>
@@ -42,9 +42,10 @@
 			rates of health insurance coverage among different Latino groups, 
 			differences in the relationships with the likelihood of having health 
 			insurance with factors such as immigration status, 
-			and that substantial reductions in disparities both among Latinos and 
-			between Latinos and Whites were concurrent with implementation 
-			of the Affordable Care Act (ACA) and Medicaid expansion.</p>
+			and that substantial reductions in coverage disparities both among 
+			Latinos and between Latinos and Whites were concurrent with 
+			implementation of the Affordable Care Act (ACA) and Medicaid expansion.
+		</p>
 		<p>Currently, I&rsquo;m interested in identifying modern and historical sources of
 			structural and implicit racism, particularly in the Southwest and West.
 		</p>
@@ -54,8 +55,7 @@
 		<p><b>Trusts with the Government: Allotments, Natural Resource Allocation,
 			and their Impact on Growth and Culture of First Nations.</b></p>
 		<h2>Publications</h2>	
-		<p><a href="Forthcoming" 
-			target="_blank"><b>Gonzales, S</b> and Sommers BD (2017) 
+		<p><a href=""><b>Gonzales, S</b> and Sommers BD (2017) 
 			&ldquo;Intra-Ethnic Coverage Disparities and Effects on Health 
 			Reform.&rdquo; <i>Health Services Research.</i> Forthcoming.</a>
 		</p>
