--- a/map.html
+++ b/map.html
@@ -169,6 +169,6 @@
 	</div>
 	<script src="//d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<script src="//d3js.org/topojson.v1.min.js"></script>
-	<script src="http://www.numericjs.com/lib/numeric-1.2.6.min.js"></script>
+	<script src="https://www.numericjs.com/lib/numeric-1.2.6.min.js"></script>
 	<script src="scripts/map.js"></script>
 </body>
