--- a/map.html
+++ b/map.html
@@ -167,8 +167,8 @@
 		<p>The publicly available data comes from <a href="https://www.nhgis.org/" target="_blank">NHGIS</a>, the <a href="https://www.census.gov/" target="_blank">US Census Bureau</a>, <a href="http://www.equality-of-opportunity.org/data" target="_blank">Chetty, et al. (2014)</a>, or from wherever you collected yours.
 		</p>
 	</div>
-	<script src="//d3js.org/d3.v4.min.js" charset="utf-8"></script>
-	<script src="//d3js.org/topojson.v1.min.js"></script>
-	<script src="https://www.numericjs.com/lib/numeric-1.2.6.min.js"></script>
+	<script src="scripts/d3.v4.min.js" charset="utf-8"></script>
+	<script src="scripts/topojson.v1.min.js"></script>
+	<script src="scripts/numeric-1.2.6.min.js"></script>
 	<script src="scripts/map.js"></script>
 </body>
