--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 			Dept. of Economics at Harvard's Graduate School of Arts and Sciences in 
 			2015-2017.</p>
 		<div class="lal">
-			Email me: <a href="mailto:chcgnzls@gmail.com?Subject=Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chcgnzls@gmail.com</a>
+			Email me: <a href="mailto:chcgnzls@gmail.com?Subject=Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chc.gnzls@gmail.com</a>
 		</div>
 		<div class="ral">
 			<a href="files/CV_sgonzales.pdf" target="_blank">View my CV</a>
