--- a/about.html
+++ b/about.html
@@ -28,14 +28,14 @@
 			Dept. of Economics at Harvard's Graduate School of Arts and Sciences in 
 			2015-2017.</p>
 		<div class="lal">
-			Email me: <a href="mailto:chcgnzls@gmail.com?Subject=Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chc.gnzls@gmail.com</a>
+			Email me: <a href="mailto:chc.gnzls@gmail.com?Subject=Y&aacute;&#39;&aacute;&aacute;t&#39;&eacute;&eacute;h" target="_top">chc.gnzls@gmail.com</a>
 		</div>
 		<div class="ral">
 			<a href="files/CV_sgonzales.pdf" target="_blank">View my CV</a>
 		</div>
 		<div style="clear: both"></div>
 		<h2>Research Interests</h2>
-		<p>My previous research documented growing disparity in the rates of 
+		<p>My research has documented growing disparity in the rates of 
 			tissue plasminogen activator (tPA) utilization between rural and urban 
 			hospitals and the effectiveness of Primary Stroke Center accreditation in
 			closing the gap. I have also shown substantial variation in 
