--- a/404.html
+++ b/404.html
@@ -7,6 +7,10 @@
 <title>404</title>
 </head>
 <body>
-<h1>404 Err</h1>
+<div id="par">
+<div id="h0"><h1>404 Err</h1></div>
+<div id="h1"><h1>404 Err</h1></div>
+</div>
+<h1 style="opacity:0">404 Err</h1>
 <p>&mdash;Something&rsquo;s lost and can&rsquo;t be found. Please, St. Anthony, look around.</p>
 </body>
