--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="styles/404.css">
-<link href="https://fonts.googleapis.com/css?family=Cardo|Abril+Fatface" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Abril+Fatface" rel="stylesheet"> 
 <meta charset="utf-8">
 <title>404</title>
 </head>
