--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 	<div id="topBar">
 		<div class="bottomAlign" id="main-nav">
 			<ul class="nav">
-				<li><a href="index.html" class="nav">Home</a></li>
-				<li><a href="map.html" target="_blank" class="nav">
+				<li><a href="exploring-opportunity" target="_blank" class="nav">
 					Exploring Opportunity</a></li>
-				<li><a href="#" class="nav">About</a></li>
 			</ul>
 		</div>
 	</div>
