--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div style="clear: both"></div>
 		<h2>Research Interests</h2>
 		<p>My research has documented growing disparity in the rates of 
-			tissue plasminogen activator (tPA) utilization between rural and urban 
+			tissue plasminogen activator (tPA) utilization in rural and urban 
 			hospitals and the effectiveness of Primary Stroke Center accreditation in
 			closing the gap. I have also shown substantial variation in 
 			rates of health insurance coverage among different Latino groups, 
