--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			Latinos and between Latinos and Whites were concurrent with 
 			implementation of the Affordable Care Act (ACA) and Medicaid expansion.
 		</p>
-		<p>Currently, I&rsquo;m interested in identifying modern and historical sources of
-			structural and implicit racism, particularly in the Southwest and West.
+		<p>Currently, I&rsquo;m interested in identifying modern and historical
+			sources of structural inequity, particularly in the Southwest and West.
 		</p>
 		<h3>Working Papers</h3>
 		<p><b>Sources of Behavioral Bias in Rank and Review of Applications to 
