--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			rates of health insurance coverage among different Latino groups, 
 			differences in the relationships with the likelihood of having health 
 			insurance with factors such as immigration status, 
-			and that substantial reductions in coverage disparities both among 
+			and that reductions in coverage disparities both among 
 			Latinos and between Latinos and Whites were concurrent with 
 			implementation of the Affordable Care Act (ACA) and Medicaid expansion.
 		</p>
