--- a/how-to.html
+++ b/how-to.html
@@ -35,34 +35,29 @@
 		</div>
 		<h2 id="nav">Navigation:</h2>
 		<div class="par">
-			Each of the options menus can be closed and opened 
-			by clicking on the bars on the edges 
-			of the window like the one below (the colors are reversed for contrast).
+			Each of the option side-bars can be closed and opened 
+			by clicking on the light gray bars like the one below:
 		</div>
 		<div class="bar"></div> 
 		<h3 id="zoom">Zoom:</h3>
 		<div class="par">
-			Click to zoom and center on a geography. To get a closer look, click on
-			a smaller geography; the map scales proportionally to the area of the 
-			geography.
-			You can recenter the map
-			by clicking the same geography twice or by clicking on the 
-			background of the map.
+			Click to zoom and center on a geographic-level. To get a closer look, 
+			click on a smaller region; the map scales proportionally to its area.
+			You can recenter the map by clicking the same location twice or by 
+			clicking on the background of the map.
 		</div>
 		<h2 id="data">Using your own data:</h2>
 		<div class="par">
-			This site allows you to open any additional data that you&rsquo;d like
+			This site allows you to your own dataset that you&rsquo;d like
 			to explore that isn&rsquo;t already in the dataset. These files will 
-			not be saved or uploaded to a server anywhere. To prevent data loss due 
-			to differences in data types and handling across software and languages,
-			I suggest saving all of you data (at the very least the 
-			geographic identifiers) that you intend to use as UTF-8 
-			encoded character stings before attempting to load it. 
+			not be saved. To prevent data loss, I suggest saving all of you data 
+			(at the very least the geographic identifiers) that you intend to use 
+			as UTF-8 encoded character strings before attempting to load it. 
 		</div>
 		<div class="par">
 			Variables should not be stored as <span class="mono">null</span> 
 			unless you expect them to be treated as zeros or they are stored as a 
-			character sting and you expect them to treated as missing values. 
+			character string and you expect them to treated as missing values. 
 			Variables in this form have not been rigorously tested; you may 
 			risk data loss and failed or incorrect merges.
 		</div>
