--- a/how-to.html
+++ b/how-to.html
@@ -167,7 +167,9 @@
 		<h2 id="plot">Plotting:</h2>
 		<div class="par">
 			This site a scatter plot feature. As default, the dependant variable is
-			grouped into 64 bins mean.	
+			grouped into 64 bins. The mean value of the dependant and independent 
+			variable is plotted. The size of each point represents the relative
+			number of observations in each bin.	
 		</div>
 		<ol>
 			<li>
