--- a/how-to.html
+++ b/how-to.html
@@ -190,17 +190,9 @@
 			</li>
 			<li>
 				<div class="par">
-					As a default, the scatter plot arithmetic mean values of the 
-					dependent and independent variables in 64 mutually exclusive equally 
-					sized intervals.
-					The size of each point represents number of observations in a given
-					interval.
-				</div>
-				<div class="par">
-					You can choose any number of bins&mdash;only positive integer values
-					make sense. If you choose the number of bins to be less than 2 or 
-					greater than the number of observations, the scatter plot will 
-					load. 
+					You can choose any number of bins between 2 and the number of 
+					observations. Any choice outside this range will load a traditional
+					scatter plot. 
 				</div>
 			</li>
 		</ol>
