--- a/how-to.html
+++ b/how-to.html
@@ -192,7 +192,7 @@
 				<div class="par">
 					You can choose any number of bins between 2 and the number of 
 					observations. Any choice outside this range will load a traditional
-					scatter plot. 
+					(unbinned) scatter plot. 
 				</div>
 			</li>
 		</ol>
