--- a/how-to.html
+++ b/how-to.html
@@ -54,7 +54,7 @@
 			(at the very least the geographic identifiers) that you intend to use 
 			as UTF-8 encoded character strings before attempting to load it. 
 		</div>
-		<div class="par">
+		<div class="par" id="noteNull">
 			<h3>Note on <span class="mono">null</span> types:</h3>
 			Variables should not be stored as <span class="mono">null</span> 
 			unless you expect them to be treated as zeros or if they are stored as a 
