--- a/how-to.html
+++ b/how-to.html
@@ -71,6 +71,7 @@
 				<div class="par">
 					Click the light gray bar at the top of the page, above 
 					the map&mdash;a dropdown box will open.	
+					<img src="styles/imgs/use-data.png" style="width:370px">
 				</div>
 			</li>
 			<li>
