added IPUMS link

--- a/how-to.html
+++ b/how-to.html
@@ -89,7 +89,7 @@
 					This geographic identifier must be a concatenation of the 2000 
 					two-digit state FIPS and three-digit county FIPS codes with 
 					leading zeros. 
-					For more information on FIPS codes click <a href="here">here</a>.
+					For more information on FIPS codes see <a href="https://usa.ipums.org/usa-action/variables/COUNTYFIPS#description_section">IPUMS description</a>.
 				</div>
 				<div class="par">
 					If you are loading data with missing geographic identifirs, they 
