--- a/how-to.html
+++ b/how-to.html
@@ -17,11 +17,14 @@
 		<div class="par">
 			This site was developed and tested using Chromium Browser (Google 
 			Chrome). If something looks or acts a bit off, it might be because 
-			your browser.
+			of your browser.
 		</div>
 		<div>
 			<h3>Jump to:</h3>
 			<ul class="nav">
+				<li class="nav">
+					<a href="#vars">Variable Definitions</a>
+				</li>
 				<li class="nav">
 					<a href="#nav">Navigation</a>
 					<ul>
@@ -32,6 +35,11 @@
 				<li class="nav"><a href="#reg">Regression table</a></li>
 				<li class="nav"><a href="#plot">Plotting</a></li>
 			</ul>
+		</div>
+		<h2 id="vars">Variable Definitions</h2>
+		<div class="par">
+			The variables names are very confusing. You here&rsquo;s the
+			<a href="http://www.equality-of-opportunity.org/data/neighborhoods/online_table4.pdf" target="_blank">documentation</a> with all the definitions and the naming scheme.	
 		</div>
 		<h2 id="nav">Navigation:</h2>
 		<div class="par">
