--- a/how-to.html
+++ b/how-to.html
@@ -38,7 +38,7 @@
 		</div>
 		<h2 id="vars">Variable Definitions</h2>
 		<div class="par">
-			The variables names are very confusing. You here&rsquo;s the
+			There are a lot of variables and abbreviations. You here&rsquo;s the
 			<a href="http://www.equality-of-opportunity.org/data/neighborhoods/online_table4.pdf" target="_blank">documentation</a> with all the definitions and the naming scheme.	
 		</div>
 		<h2 id="nav">Navigation:</h2>
