--- a/exploring-opportunity.html
+++ b/exploring-opportunity.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Exploring Opportunity</h1>
 	<div id="howTo">
-	<a id="howTo" href="http://www.chcgnzls.com/how-to">How to use this site</a>
+	<a id="howTo" href="how-to">How to use this site</a>
 	</div>
 	<div id="dropContainer">
 		<div id="dropdown" onclick="showHide('dataContainer')"></div>
