better forthcoming link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<p><b>Trusts with the Government: Allotments, Natural Resource Allocation,
 			and their Impact on Growth and Culture of First Nations.</b></p>
 		<h2>Publications</h2>	
-		<p><a href="http://www.chcgnzls.com/forthcoming"><b>Gonzales, S</b> and Sommers BD (2017) 
+		<p><a href="forthcoming"><b>Gonzales, S</b> and Sommers BD (2017) 
 			&ldquo;Intra-Ethnic Coverage Disparities and Effects on Health 
 			Reform.&rdquo; <i>Health Services Research.</i> Forthcoming.</a>
 		</p>
