Working to Currnet

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<p>Currently, I&rsquo;m interested in identifying modern and historical
 			sources of structural inequity, particularly in the Southwest and West.
 		</p>
-		<h3>Working Papers</h3>
+		<h3>Current Projects</h3>
 		<p><b>Sources of Behavioral Bias in Rank and Review of Applications to 
 			Medical School.</b></p>
 		<p><b>Trusts with the Government: Allotments, Natural Resource Allocation,
