--- a/how-to.html
+++ b/how-to.html
@@ -93,7 +93,7 @@
 					Once the file is successfully opened, the rest of the menu 
 					will be become active. Click the dropdown box above the Information
 					box. Choose the variable in your dataset that will match to the EO 
-					dataset based on geographic geographic location. 
+					dataset based on geographic location. 
 					This geographic identifier must be a concatenation of the 2000 
 					two-digit state FIPS and three-digit county FIPS codes with 
 					leading zeros. 
