added dash link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			sources of structural inequity, particularly in the Southwest and West.
 		</p>
 		<h2>Publications</h2>	
-		<p><a href="forthcoming"><b>Gonzales, S</b> and Sommers BD (2017) 
+		<p><a href="https://dash.harvard.edu/handle/1/32749951" target="_blank"><b>Gonzales, S</b> and Sommers BD (2017) 
 			&ldquo;Intra-Ethnic Coverage Disparities and Effects on Health 
 			Reform.&rdquo; <i>Health Services Research.</i> Forthcoming.</a>
 		</p>
