--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <title>Exploring Opportunity</title>
 <link rel="stylesheet" type="text/css" href="styles/map.css"> 
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display|Raleway|Old+Standard+TT|Open+Sans|Crimson+Text" rel="stylesheet">
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H8M24N2W0W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H8M24N2W0W');
+</script>
+</head>
 <body>
 	<h1>Exploring Opportunity</h1>
 	<div id="howTo">
